# src/shared/middlewares/validation.js
@@ -5,61 +5,61 @@ exports.validate = (method) => {
 
         case 'id':
             return [
-                param('id', 'خطا در پارامترهای ورودی').exists().isLength({ min: 20 })
+                param('id', 'Input error').exists().isLength({ min: 20 })
             ]
 
         case 'spn':
             return [
-                check('EV', 'انتخا نوع خودرو اجباری است').exists(),
-                check('spn', 'خطای ورودی SPN').exists().isInt(),
-                check('source', 'خطای ورودی Source').exists(),
-                check('topic', 'خطای ورودی Topic').exists().isIn(['Location', 'Signal', 'Alarm']),
-                check('name', 'خطای ورودی نام spn').exists().isString(),
-                check('description', 'خطای ورودی نام توضیحات').exists().isLength({ min: 6 }),
-                check('dimenssion', 'خطای ورودی واحد اندزه گیری').exists()
+                check('EV', 'Select vehicle type').exists(),
+                check('spn', 'Input error, SPN').exists().isInt(),
+                check('source', 'Input error, Source').exists(),
+                check('topic', 'Input error, Topic').exists().isIn(['Location', 'Signal', 'Alarm']),
+                check('name', 'Input error, spn name').exists().isString(),
+                check('description', 'Input error, description').exists().isLength({ min: 6 }),
+                check('dimenssion', 'Input error, dimenssion').exists()
             ]
 
         case 'agency':
             return [
-                check('uniqueId', 'شناسه یکتای نمایندگی را وارد کنید').exists(),
-                check('code', 'کد نمایندگی را وارد کنید').exists(),
-                check('name', 'نام نمایندگی را وارد کنید').exists(),
+                check('uniqueId', 'Input error, agency unique identification number').exists(),
+                check('code', 'Input error, agency unique code').exists(),
+                check('name', 'Input error, agency name').exists(),
                 check('address.province')
                     .exists()
-                    .withMessage('استان نمایندگی را وارد کنید'),
+                    .withMessage('Input error, agency province'),
                 check('address.city')
                     .exists()
-                    .withMessage('شهر نمایندگی را وارد کنید'),
+                    .withMessage('Input error, agency city'),
                 check('address.coordinate')
                     .exists()
-                    .withMessage('مختصات جغرافیایی نمایندگی را وارد کنید'),
-                check('phone', 'شماره تلفن نمایندگی را وارد کنید').exists(),
-                check('services', 'سرویس های ارائه شده توسط نمایندگی را وارد کنید').exists().isLength({ min: 1 }),
-                check('vehicles', 'خودروهای تحت پوشش نمایندگی را وارد کنید').exists().exists().isLength({ min: 1 }),
-                check('status', 'وضعیت نمایندگی را وارد کنید').exists().isIn([true, false]),
+                    .withMessage('Input error, agency geographic coordinates'),
+                check('phone', 'Input error, agency phone number').exists(),
+                check('services', 'Select at least one service provided by the agency').exists().isLength({ min: 1 }),
+                check('vehicles', 'Select at least one vehicle which the agency serves').exists().exists().isLength({ min: 1 }),
+                check('status', 'Input error, agency status').exists().isIn([true, false]),
                 check('manager.name')
                     .exists()
-                    .withMessage('نام مسئول نمایندگی را وارد کنید'),
+                    .withMessage('Input error, agency manager name'),
                 check('manager.phone')
                     .exists()
-                    .withMessage('شماره تلفن همراه مسئول نمایندگی را وارد کنید')
+                    .withMessage('Input error, agency manager phone number')
             ]
 
         case 'vehicle':
             return [
-                check('type', 'نوع خودرو را انتخاب کنید').exists().isIn(['EV', 'EBUS', 'EBike']),
-                check('system', 'سیستم خودرو را وارد کنید').exists(),
-                check('model', 'مدل خودرو را وارد کنید').exists(),
-                check('capacity', 'ظرفیت خودرو را وارد کنید').exists(),
-                check('charger', 'نوع شارژر خودرو را وارد کنید').exists(),
-                check('color', 'رنگ خودرو را انتخاب کنید').exists().exists(),
-                check('engine', 'موتور خودرو را وارد کنید').exists(),
-                check('engine_type', 'نوع موتور خودرو را وارد کنید').exists(),
-                check('VIN', 'شماره شاسی خودرو را وارد کنید').exists(),
-                check('profileId', 'مالک خودرو را مشخص کنید').exists(),
-                check('car_tag', 'پلاک خودرو را وارد کنید').exists().isLength({ min: 5 }),
-                check('agency', 'نمایندگی خودرو را انتخاب کنید').exists(),
-                check('coordinate', 'مختصات جغرافیایی خودرو را مشخص کنید').exists().isObject(),
+                check('type', 'Input error, vehicle type').exists().isIn(['EV', 'EBUS', 'EBike']),
+                check('system', 'Input error, vehicle infrastructure type').exists(),
+                check('model', 'Input error, vehicle model').exists(),
+                check('capacity', 'Input error, vehicle capacity').exists(),
+                check('charger', 'Input error, vehicle charger type').exists(),
+                check('color', 'Input error, vehicle color').exists().exists(),
+                check('engine', 'Input error, vehicle engine').exists(),
+                check('engine_type', 'Input error, vehicle engine type').exists(),
+                check('VIN', 'Input error, vehicle VIN').exists(),
+                check('profileId', 'Input error, vehicle owner').exists(),
+                check('car_tag', 'Input error, vehicle car tag').exists().isLength({ min: 5 }),
+                check('agency', 'Input error, vehicle agency').exists(),
+                check('coordinate', 'Input error, vehicle geographic coordinate').exists().isObject(),
             ]
         case 'reserve':
             return [
